Add send email funtion

--- a/index.html
+++ b/index.html
@@ -334,7 +334,12 @@
     <section id="contact" class="contact">
       <h2>Contact</h2>
       <div class="container">
-        <form method="POST" data-netlify="true" data-netlify-recaptcha="true">
+        <form
+          action="process.php"
+          method="POST"
+          data-netlify="true"
+          data-netlify-recaptcha="true"
+        >
           <div class="text-fields">
             <input
               type="text"
