--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
           </div>
 
-          <div class="project">
+<!--           <div class="project">
             <div class="project-thumbnail">
               <div class="thumbnail">
                 <a href="https://jayyelpcamp.herokuapp.com/" target="_blank"
@@ -315,8 +315,6 @@
                   <a href="https://jayyelpcamp.herokuapp.com/" target="_blank">
                     <i class="fas fa-external-link-alt"></i
                   ></a>
-
-                  <!-- <i class="fab fa-github"></i> -->
                 </div>
               </h3>
               <div>
@@ -325,7 +323,7 @@
                 Geocoder and using Cloudinary for images uploading.
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
