--- a/index.html
+++ b/index.html
@@ -229,6 +229,36 @@
               </div>
             </div>
           </div>
+          
+
+          <div class="project">
+            <div class="project-thumbnail">
+              <div class="thumbnail">
+                <a href="https://renolighting.com/" target="_blank"
+                  ><img src="img/reno.gif" alt=""
+                /></a>
+              </div>
+              <p class="tech">
+                WordPress, WooCommerce, PHP, JavaScript, JQuery, Bootstrap, CSS
+              </p>
+            </div>
+            <div class="project-detail">
+              <h3 class="project-title">
+                <div>Reno LED Lighting Inc</div>
+                <div class="linkicons">
+                  <a href="http://www.flexcycleinc.com/" target="_blank"
+                    ><i class="fas fa-external-link-alt"></i
+                  ></a>
+
+                  <!-- <i class="fab fa-github"></i> -->
+                </div>
+              </h3>
+              <div>
+                This is a full stack responsive e-commerce website, using WordPress and WooCommerce. 
+              </div>
+            </div>
+          </div>
+
 
           <div class="project">
             <div class="project-thumbnail">
