--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <a
                   href="https://jaycreateportfolio.herokuapp.com/"
                   target="_blank"
-                  ><img src="img/resume.gif" alt=""
+                  ><img src="img/portfolio.gif" alt=""
                 /></a>
               </div>
               <p class="tech">
