--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
         <div class="backend">
           <div><h3>Server-Side Technologies</h3></div>
           <div class="skills-wrapper">
+           <div class="skill">
+              <img src="img/wordpress.png" alt="" />
+              <div class="skill-name">WordPress</div>
+            </div>
+            <div class="skill">
+              <img src="img/woo.png" alt="" />
+              <div class="skill-name">WooCommerce</div>
+            </div>
             <div class="skill">
               <img src="img/nodejs.png" alt="" />
               <div class="skill-name">Node.js</div>
