--- a/index.html
+++ b/index.html
@@ -53,18 +53,15 @@
           <img src="img/me.jpeg" alt="" />
           <div class="about-content">
             <p>
-              I am Zhen Li. My professional experience includes using
-              programming languages such as HTML, CSS, JavaScript, PHP, and
-              MySQL, etc. to create various features for company official
-              websites when I was in the last company FLEXCYCLE.
+              Hey, I am Zhen, an experienced Web Developer. I have extensive knowledge of HTML, CSS, JavaScript, PHP, and
+              MySQL, etc. I am also familiar with WordPress and WooCommerce. Combined with my communication and problem-solving skills,
+              I think I would be the excellent candidate you are looking for.
             </p>
             <p>
               In addition to my knowledge base, I actively seek out new
               technologies and stay up-to-date on industry trends and
               advancements. Thus, I also have a solid foundation in MongoDB,
-              Express, React, Redux, and Node.JS. In addition to four years’
-              work experience in Canada, I hold an Australian Master degree in
-              Computer Science.
+              Express, React, Redux, and Node.JS.
             </p>
             <p>
               I am goal-oriented, good at adapting to new environment, and
