--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="content">
         <p class="css-typing"></p>
         <a href="#projects" class="btn"
-          ><i class="fas fa-chevron-right"></i>View My Work</a
+          ><i class="fas fa-chevron-right"></i>View My Works</a
         >
       </div>
     </header>
